@@ -10,6 +10,7 @@ next (1.0):
 	- generic beans removed
 	- ReqUtil removed
 	- AreaCapableRouter now default
+	- MetaRouter introduced
 	- sub areas introduced
 	- router interface extended by setConfig method
 	- LocalePrefixRouter and Localizable added
